Fixed overlapping layout issue

--- a/src/components/app/views/table/table.scss
+++ b/src/components/app/views/table/table.scss
@@ -1,7 +1,6 @@
 [view="table"] {
     .variants {
         position: absolute;
-        top: 0px;
         left: 50vw;
         transform: translateX(-50%);
         color: #555;
@@ -71,7 +70,6 @@
         flex-direction: column;
         align-items: center;
         max-width: 100vw;
-        transform: translate(0, 0);
 
         .elements {
             display: flex;
